@startuml
interface IAMutex
class AMutex

class ImplPosix
class ImplFreertos
class ImplMock

class AMutexBase
IAMutex <|-- ImplPosix
IAMutex <|-- ImplFreertos
IAMutex <|-- ImplMock

AMutexBase <|-- AMutex

AMutexBase ..> IFactory : invokes
IFactory  ..> ImplPosix : creates
IFactory  ..> ImplFreertos : creates
IFactory  ..> ImplMock : creates

@enduml